tooling/nargo_cli/tests/snapshots/execution_success/brillig_calls/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: Unsafe block must have a safety comment above it
  ┌─ src/main.nr:5:5
  │
5 │     unsafe {
  │     ------ The comment must start with the "Safety: " word
  │

bug: Input to Brillig function is in a separate subgraph to output
  ┌─ src/main.nr:6:16
  │
6 │         assert(entry_point(x) == 2);
  │                -------------- There is no path from the output of this Brillig call to either return values or inputs of the circuit, which creates an independent subgraph. This is quite likely a soundness vulnerability
  │
  = Call stack:
    1. src/main.nr:6:16

bug: Input to Brillig function is in a separate subgraph to output
  ┌─ src/main.nr:8:16
  │
8 │         assert(deep_entry_point(x) == 4);
  │                ------------------- There is no path from the output of this Brillig call to either return values or inputs of the circuit, which creates an independent subgraph. This is quite likely a soundness vulnerability
  │
  = Call stack:
    1. src/main.nr:8:16
