tooling/nargo_cli/tests/snapshots/execution_success/brillig_calls/execute__tests__force_brillig_true_inliner_9223372036854775807_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: Unsafe block must have a safety comment above it
  ┌─ src/main.nr:5:5
  │
5 │     unsafe {
  │     ------ The comment must start with the "Safety: " word
  │
